all but deploy done

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,9 +41,14 @@ build-job:  # Name
 
 # not sure how this will work yet, but it def doesn't work with docker compose run web rubocop
 rubocop: # Name
-  stage: static_analysis # Stage
+  stage: static_analysis    # Stage 
+  image: aymdev/dind-compose # Override the Base Image
+  before_script: # Before script to make sure that everything is properly built before running tests (db, backend, frontend, test container)
+    - docker-compose build # do I need parallel? --parallel
+    - docker-compose up -d
   script:
-    - rubocop
+    #- docker-compose run --rm test || exit $? # Run the Tests and pass the docker exit code from the container back to the script to repeat
+    - docker compose run web rubocop || exit $? # i deleted --rm not sure if that's bad.
 
 unit-test-job:   # This job runs in the test stage.
   stage: test_unit    # Stage 
