--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,8 @@ build-job:  # Name
   # image: aymdev/dind-compose # Override the Base Image so we can have Compose
   before_script: # Scripts that run first -> typically "setup/verify everything is started correctly"
     - docker version
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+
 #    - apk add --no-cache py-pip
 #    - pip install docker-compose
 #    - docker-compose version 
