--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -17,11 +17,11 @@ env:
     # GITHUB_REF_NAME is the branch/tag that initiated the workflow
     # :latest specifies the most recent version (duh)
     
-# CI/CD Service definition -> More Requirements for Docker in Docker
-services:
-  - name: docker:dind
-    entrypoint: ["env", "-u", "DOCKER_HOST"]
-    command: ["dockerd-entrypoint.sh"]
+## CI/CD Service definition -> More Requirements for Docker in Docker
+#services:
+  #- name: docker:dind
+    #entrypoint: ["env", "-u", "DOCKER_HOST"]
+    #command: ["dockerd-entrypoint.sh"]
 
 jobs:
 
