--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -70,7 +70,7 @@ jobs:
           bundle exec rubocop --require code_scanning --format CodeScanning::SarifFormatter -o rubocop.sarif
           [[ $? -ne 2 ]]
         "
-    - name: Upload Sarif output
-      uses: github/codeql-action/upload-sarif@v2
-      with:
-        sarif_file: rubocop.sarif
+    #- name: Upload Sarif output
+      #uses: github/codeql-action/upload-sarif@v2
+      #with:
+        #sarif_file: rubocop.sarif
