trying to fix build

--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -31,14 +31,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Pre-check that Docker is installed
-      run: docker version
-    #- name: Build the Docker image
-      #run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    #- name: Pre-check that Docker is installed
+      #run: docker version
     - name: Build the Docker image
-      run: docker build --pull -t $CONTAINER_IMAGE .
-    - name: Push the Docker image
-      run: docker push $CONTAINER_IMAGE  
+      run: docker build . --file Dockerfile --tag CONTAINER_IMAGE #:$(date +%s)
+    #- name: Build the Docker image
+      #run: docker build --pull -t $CONTAINER_IMAGE .
+    #- name: Push the Docker image
+      #run: docker push $CONTAINER_IMAGE  
 
 
   rubocop:
@@ -50,16 +50,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    # If running on a self-hosted runner, check it meets the requirements
-    # listed at https://github.com/ruby/setup-ruby#using-self-hosted-runners
     - name: Set up Ruby
       uses: ruby/setup-ruby@f20f1eae726df008313d2e0d78c5e602562a1bcf
       with:
         ruby-version: 2.6.6
-
-    # This step is not necessary if you add the gem to your Gemfile
-    #- name: Install Code Scanning integration
-      #run: bundle add code-scanning-rubocop --version 0.3.0 --skip-install
 
     - name: Install dependencies
       run: bundle install
@@ -69,8 +63,4 @@ jobs:
         bash -c "
           bundle exec rubocop --require code_scanning --format CodeScanning::SarifFormatter -o rubocop.sarif
           [[ $? -ne 2 ]]
-        "
-    #- name: Upload Sarif output
-      #uses: github/codeql-action/upload-sarif@v2
-      #with:
-        #sarif_file: rubocop.sarif
+
