--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -11,7 +11,7 @@ env:
   DOCKER_DRIVER: overlay2
   DOCKER_TLS_CERTDIR: ""
   DOCKER_HOST: tcp://docker:2375
-  CONTAINER_IMAGE: https://ghcr.io/$GITHUB_ACTOR/$GITHUB_REF_NAME:latest
+  #CONTAINER_IMAGE: https://ghcr.io/$GITHUB_ACTOR/$GITHUB_REF_NAME:latest
     # https://ghcr.io/ is the container registry
     # GITHUB_ACTOR is the user who initiated the workflow
     # GITHUB_REF_NAME is the branch/tag that initiated the workflow
@@ -34,7 +34,7 @@ jobs:
     #- name: Pre-check that Docker is installed
       #run: docker version
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag $CONTAINER_IMAGE #:$(date +%s)
+      run: docker build . --file Dockerfile --tag https://ghcr.io/$GITHUB_ACTOR/$GITHUB_REF_NAME:latest #:$(date +%s)
     #- name: Build the Docker image
       #run: docker build --pull -t $CONTAINER_IMAGE .
     #- name: Push the Docker image
