--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -33,12 +33,12 @@ jobs:
     - uses: actions/checkout@v3
     #- name: Pre-check that Docker is installed
       #run: docker version
-    #- name: Build the Docker image
-      #run: docker build . --file Dockerfile --tag https://ghcr.io/$GITHUB_ACTOR/$GITHUB_REF_NAME:latest
     - name: Build the Docker image
-      run: docker build --pull https://ghcr.io/$GITHUB_ACTOR/$GITHUB_REF_NAME:latest .
-    - name: Push the Docker image
-      run: docker push https://ghcr.io/$GITHUB_ACTOR/$GITHUB_REF_NAME:latest  
+      run: docker build . --file Dockerfile https://ghcr.io/$GITHUB_ACTOR/$GITHUB_REF_NAME:latest
+    #- name: Build the Docker image
+      #run: docker build --pull https://ghcr.io/$GITHUB_ACTOR/$GITHUB_REF_NAME:latest .
+    #- name: Push the Docker image
+      #run: docker push https://ghcr.io/$GITHUB_ACTOR/$GITHUB_REF_NAME:latest  
 
 
   rubocop:
