--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -25,20 +25,20 @@ env:
 
 jobs:
 
-  build:
+  #build:
 
-    runs-on: ubuntu-latest
+    #runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v3
-    - name: Pre-check that Docker is installed
-      run: docker version
+    #steps:
+    #- uses: actions/checkout@v3
+    #- name: Pre-check that Docker is installed
+      #run: docker version
+    ##- name: Build the Docker image
+      ##run: docker build . --file Dockerfile --tag https://ghcr.io/$GITHUB_ACTOR/$GITHUB_REF_NAME:latest
     #- name: Build the Docker image
-      #run: docker build . --file Dockerfile --tag https://ghcr.io/$GITHUB_ACTOR/$GITHUB_REF_NAME:latest
-    - name: Build the Docker image
-      run: docker build --pull https://ghcr.io/$GITHUB_ACTOR/$GITHUB_REF_NAME:latest .
-    - name: Push the Docker image
-      run: docker push https://ghcr.io/$GITHUB_ACTOR/$GITHUB_REF_NAME:latest  
+      #run: docker build --pull https://ghcr.io/$GITHUB_ACTOR/$GITHUB_REF_NAME:latest .
+    #- name: Push the Docker image
+      #run: docker push https://ghcr.io/$GITHUB_ACTOR/$GITHUB_REF_NAME:latest  
 
 
   rubocop:
@@ -64,4 +64,22 @@ jobs:
           bundle exec rubocop --require code_scanning --format CodeScanning::SarifFormatter -o rubocop.sarif
           [[ $? -ne 2 ]]
         "
+        
+
+  deploy:
+    runs-on: ubuntu-latest
+    
+    env:
+      HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
+      HEROKU_PRODUCTION_KEY: ${{ secrets.HEROKU_PRODUCTION_KEY }}
+    
+    steps:
+      run: apk add ruby-dev # dpl needs ruby
+      run: apk add git # container doesn't have git for some reason
+      run: apk add curl # or curl?!?
+      run: gem install json_pure # another dumb error message removed by this line
+      run: gem install faraday -v 1.8.0 # this is getting old.
+      run: gem install dpl # this is the only line in the docs
+      run: gem install dpl-heroku # another one for fun
+      run: dpl --provider=heroku --app=env.HEROKU_APP_NAME --api-key=env.HEROKU_PRODUCTION_KEY
 
