--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -77,9 +77,9 @@ jobs:
       - name: dpl needs ruby
         run: sudo apt-get install ruby-dev
       - name: container doesn't have git for some reason
-        run: sudo apt-get add git 
+        run: sudo apt-get git 
       - name: or curl
-        run: sudo apt-get add curl
+        run: sudo apt-get curl
       - name: another dumb error message removed by this line
         run: gem install json_pure
       - name: this is getting old.
