--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -93,14 +93,13 @@ jobs:
         
         
   deploy:
-  
     runs-on: ubuntu-latest
     
     steps:
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_api_key: ${{secrets.HEROKU_PRODUCTION_KEY}}
           heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
           heroku_email: ${{ secrets.HEROKU_ACC_EMAIL }}
           usedocker: true
