--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -56,6 +56,25 @@ jobs:
       run: bundle exec rspec -f j
 
              
+             
+  integration_testing:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Set up Ruby
+      uses: ruby/setup-ruby@f20f1eae726df008313d2e0d78c5e602562a1bcf
+      with:
+        ruby-version: 2.6.6
+
+    - name: Install dependencies
+      run: bundle install
+
+    - name: rspec run
+      run: bundle exec cucumber
+         
            
         
   deployment:
