--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -30,11 +30,12 @@ jobs:
       run: bundle install
 
     - name: Rubocop run
-      run: |
-        bash -c "
-          bundle exec rubocop --require code_scanning --format CodeScanning::SarifFormatter -o rubocop.sarif
-          [[ $? -ne 2 ]]
-        "
+      run: bundle exec rubocop
+      #run: |
+        #bash -c "
+          #bundle exec rubocop --require code_scanning --format CodeScanning::SarifFormatter -o rubocop.sarif
+          #[[ $? -ne 2 ]]
+        #"
              
 
   unit_testing:
@@ -53,7 +54,7 @@ jobs:
       run: bundle install
 
     - name: rspec run
-      run: bundle exec rspec -f j
+      run: bundle exec rspec
 
              
              
