--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -78,7 +78,7 @@ jobs:
     
     steps:
       - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+      - uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_PRODUCTION_KEY}}
           heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
